Week3 Part 1 - WebScraping using Beautiful Soup in Python

--- a/Web Scraping using Python - Week 3 - Part 1.ipynb
+++ b/Web Scraping using Python - Week 3 - Part 1.ipynb
@@ -1,11 +1,273 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Web Scraping using Beautiful Soup in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import the required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The data required is from a Wiki page containing a table. We will use Beautiful Soup to extract the table and insert it into a Pandas Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Boroughs</th>\n",
+       "      <th>Neighborhoods</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1A</td>\n",
+       "      <td>Not assigned</td>\n",
+       "      <td>Not assigned\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>M2A</td>\n",
+       "      <td>Not assigned</td>\n",
+       "      <td>Not assigned\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village\\n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode      Boroughs       Neighborhoods\n",
+       "0     None          None                None\n",
+       "1      M1A  Not assigned      Not assigned\\n\n",
+       "2      M2A  Not assigned      Not assigned\\n\n",
+       "3      M3A    North York         Parkwoods\\n\n",
+       "4      M4A    North York  Victoria Village\\n"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#URL given \n",
+    "url = 'https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\n",
+    "source = requests.get(url).text\n",
+    "soup = BeautifulSoup(source, 'lxml')\n",
+    "\n",
+    "body = soup.find('body')\n",
+    "table = body.find('table', class_ = \"wikitable sortable\")\n",
+    "table_rows = table.find_all('tr')\n",
+    "\n",
+    "data = [] #Stores the Data\n",
+    "column_name = ['Postcode', 'Boroughs', 'Neighborhoods'] #Name of the Columns for the Dataframe\n",
+    "\n",
+    "for tr in table_rows:\n",
+    "    td = tr.find_all('td')\n",
+    "    row_data = [tr.text for tr in td]\n",
+    "    data.append(row_data)\n",
+    "    \n",
+    "df = pd.DataFrame(data, columns = column_name)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We now clean up the data according to the following rules:\n",
+    "\n",
+    "* The dataframe will consist of three columns: PostalCode, Borough, and Neighborhood\n",
+    "\n",
+    "* Only process the cells that have an assigned borough. Ignore cells with a borough that is Not assigned.\n",
+    "\n",
+    "* More than one neighborhood can exist in one postal code area. For example, in the table on the Wikipedia page, you will notice that M5A is listed twice and has two neighborhoods: Harbourfront and Regent Park. These two rows will be combined into one row with the neighborhoods separated with a comma as shown in row 11 in the above table.\n",
+    "\n",
+    "* If a cell has a borough but a Not assigned neighborhood, then the neighborhood will be the same as the borough. So for the 9th cell in the table on the Wikipedia page, the value of the Borough and the Neighborhood columns will be Queen's Park."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postcode</th>\n",
+       "      <th>Boroughs</th>\n",
+       "      <th>Neighborhoods</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>M1J</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Scarborough Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>M1K</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>East Birchmount Park, Ionview, Kennedy Park</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postcode     Boroughs                                Neighborhoods\n",
+       "0      M1E  Scarborough            Guildwood, Morningside, West Hill\n",
+       "1      M1G  Scarborough                                       Woburn\n",
+       "2      M1H  Scarborough                                    Cedarbrae\n",
+       "3      M1J  Scarborough                          Scarborough Village\n",
+       "4      M1K  Scarborough  East Birchmount Park, Ionview, Kennedy Park"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Drop the first row\n",
+    "df.drop(0, axis = 0, inplace = True) \n",
+    "\n",
+    "#Drop rows were borough is not assigned\n",
+    "df.drop(df[df['Boroughs'] == 'Not assigned'].index, axis = 0, inplace = True) \n",
+    "\n",
+    "#Replace the additional \\n in the Neighborhoods column\n",
+    "df['Neighborhoods'] = df['Neighborhoods'].str.replace('\\n','')\n",
+    "\n",
+    "#Group neighborhoods with the same postal code\n",
+    "df = df.groupby(['Postcode','Boroughs'])['Neighborhoods'].apply(lambda x: \"%s\" % ', '.join(x)).to_frame().reset_index()\n",
+    "\n",
+    "#For 'Not assigned' neighborhoods, the neighborhood will be the same as the borrow\n",
+    "df.loc[(df.Neighborhoods == 'Not assigned'), 'Neighborhoods'] = df['Boroughs']\n",
+    "\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(101, 3)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
