Week3 Part 1 - WebScraping using Beautiful Soup in Python

--- a/Web Scraping using Python - Week 3 - Part 1.ipynb
+++ b/Web Scraping using Python - Week 3 - Part 1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4      M4A    North York  Victoria Village\\n"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,48 +184,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
        "      <td>M1E</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>Guildwood, Morningside, West Hill</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>M1G</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>Woburn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>M1H</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>Cedarbrae</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>M1J</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>Scarborough Village</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>M1K</td>\n",
-       "      <td>Scarborough</td>\n",
-       "      <td>East Birchmount Park, Ionview, Kennedy Park</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Postcode     Boroughs                                Neighborhoods\n",
-       "0      M1E  Scarborough            Guildwood, Morningside, West Hill\n",
-       "1      M1G  Scarborough                                       Woburn\n",
-       "2      M1H  Scarborough                                    Cedarbrae\n",
-       "3      M1J  Scarborough                          Scarborough Village\n",
-       "4      M1K  Scarborough  East Birchmount Park, Ionview, Kennedy Park"
+       "  Postcode     Boroughs                           Neighborhoods\n",
+       "0      M1B  Scarborough                          Rouge, Malvern\n",
+       "1      M1C  Scarborough  Highland Creek, Rouge Hill, Port Union\n",
+       "2      M1E  Scarborough       Guildwood, Morningside, West Hill\n",
+       "3      M1G  Scarborough                                  Woburn\n",
+       "4      M1H  Scarborough                               Cedarbrae"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(101, 3)"
+       "(103, 3)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
