Week3 Part 1 - WebScraping using Beautiful Soup in Python

--- a/Web Scraping using Python - Week 3 - Part 1.ipynb
+++ b/Web Scraping using Python - Week 3 - Part 1.ipynb
@@ -87,13 +87,13 @@
     "#Drop rows were borough is not assigned\n",
     "df.drop(df[df['Boroughs'] == 'Not assigned'].index, axis = 0, inplace = True) \n",
     "\n",
-    "#Replace the additional \\n in the Neighborhoods column\n",
+    "#Replace the additional '\\n' in the Neighborhoods column with ''\n",
     "df['Neighborhoods'] = df['Neighborhoods'].str.replace('\\n','')\n",
     "\n",
     "#Group neighborhoods with the same postal code\n",
     "df = df.groupby(['Postcode','Boroughs'])['Neighborhoods'].apply(lambda x: \"%s\" % ', '.join(x)).to_frame().reset_index()\n",
     "\n",
-    "#For 'Not assigned' neighborhoods, the neighborhood will be the same as the borrow\n",
+    "#For 'Not assigned' neighborhoods, the neighborhood will be the same as the borough\n",
     "df.loc[(df.Neighborhoods == 'Not assigned'), 'Neighborhoods'] = df['Boroughs']\n",
     "\n",
     "df.head(5)"
