--- a/Web Scraping using Python - Week 3 - Part 2.ipynb
+++ b/Web Scraping using Python - Week 3 - Part 2.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,24 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['Latitude', 'Longitude']] = pd.read_csv('Geospatial_Coordinates.csv', usecols = [1,2])\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part 3 - Basic Analysis of Neighborhoods in Toronto"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -377,67 +360,80 @@
        "      <th>Postcode</th>\n",
        "      <th>Boroughs</th>\n",
        "      <th>Neighborhoods</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>73</td>\n",
-       "      <td>M6C</td>\n",
-       "      <td>York</td>\n",
-       "      <td>Humewood-Cedarvale</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>74</td>\n",
-       "      <td>M6E</td>\n",
-       "      <td>York</td>\n",
-       "      <td>Caledonia-Fairbanks</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>80</td>\n",
-       "      <td>M6M</td>\n",
-       "      <td>York</td>\n",
-       "      <td>Del Ray, Keelesdale, Mount Dennis, Silverthorn</td>\n",
+       "      <td>2</td>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>81</td>\n",
-       "      <td>M6N</td>\n",
-       "      <td>York</td>\n",
-       "      <td>The Junction North, Runnymede</td>\n",
+       "      <td>3</td>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>98</td>\n",
-       "      <td>M9N</td>\n",
-       "      <td>York</td>\n",
-       "      <td>Weston</td>\n",
+       "      <td>4</td>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Postcode Boroughs                                   Neighborhoods\n",
-       "73      M6C     York                              Humewood-Cedarvale\n",
-       "74      M6E     York                             Caledonia-Fairbanks\n",
-       "80      M6M     York  Del Ray, Keelesdale, Mount Dennis, Silverthorn\n",
-       "81      M6N     York                   The Junction North, Runnymede\n",
-       "98      M9N     York                                          Weston"
+       "  Postcode     Boroughs                           Neighborhoods   Latitude  \\\n",
+       "0      M1B  Scarborough                          Rouge, Malvern  43.806686   \n",
+       "1      M1C  Scarborough  Highland Creek, Rouge Hill, Port Union  43.784535   \n",
+       "2      M1E  Scarborough       Guildwood, Morningside, West Hill  43.763573   \n",
+       "3      M1G  Scarborough                                  Woburn  43.770992   \n",
+       "4      M1H  Scarborough                               Cedarbrae  43.773136   \n",
+       "\n",
+       "   Longitude  \n",
+       "0 -79.194353  \n",
+       "1 -79.160497  \n",
+       "2 -79.188711  \n",
+       "3 -79.216917  \n",
+       "4 -79.239476  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[(df.Boroughs == 'York')]"
+    "df[['Latitude', 'Longitude']] = pd.read_csv('Geospatial_Coordinates.csv', usecols = [1,2])\n",
+    "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
